# pool_booking

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
doc/: LISEZ-MOI.md  LÉAME.md  api_documentation.md  读我档案.md
pool_booking/: __init__.py  __main__.py  booking.py
test/: authentication_success.html  fail_columns.csv  schedule_formatchange.html  test_booking.py  test_main.py
test_assets/: confirmation_success.html  fail_rows.csv  pass.csv  schedule_success.html
